// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component should have Card title with image 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "#e1e8ee",
              "borderWidth": 1,
              "margin": 15,
              "marginBottom": 0,
              "padding": 15,
              "shadowColor": "rgba(0,0,0, .2)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            Object {
              "padding": 0,
            },
            Object {
              "backgroundColor": "red",
            },
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                undefined,
              ]
        }
    >
        <View>
            <TextElement
                style={
                    Array [
                        Object {
                          "color": "#43484d",
                          "fontSize": 17.5,
                          "fontWeight": "bold",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        Object {
                          "marginTop": 15,
                        },
                        Object {
                          "backgroundColor": "red",
                        },
                        Object {
                          "fontFamily": "arial",
                        },
                      ]
                }
            >
                HELLO WORLD
            </TextElement>
        </View>
        <View
            style={undefined}
        >
            <Image
                resizeMode="cover"
                source={
                    Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
                }
                style={
                    Array [
                        Object {
                          "height": 150,
                          "width": null,
                        },
                        undefined,
                      ]
                }
            >
                <View
                    style={
                        Object {
                            "alignItems": "center",
                            "alignSelf": "stretch",
                            "backgroundColor": "rgba(0, 0, 0, 0.2)",
                            "bottom": 0,
                            "flex": 1,
                            "justifyContent": "center",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                    }
                >
                    
                </View>
            </Image>
            <View
                style={
                    Array [
                        Object {
                          "padding": 10,
                        },
                        undefined,
                      ]
                }
            />
        </View>
    </View>
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "#e1e8ee",
                    "borderWidth": 1,
                    "margin": 15,
                    "marginBottom": 0,
                    "padding": 15,
                    "shadowColor": "rgba(0,0,0, .2)",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  Object {
                    "padding": 0,
                  },
                  Object {
                    "backgroundColor": "red",
                  },
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                        undefined,
                      ]
            }
      >
            <View>
                  <TextElement
                        style={
                              Array [
                                    Object {
                                      "color": "#43484d",
                                      "fontSize": 17.5,
                                      "fontWeight": "bold",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "marginTop": 15,
                                    },
                                    Object {
                                      "backgroundColor": "red",
                                    },
                                    Object {
                                      "fontFamily": "arial",
                                    },
                                  ]
                        }
                  >
                        HELLO WORLD
                  </TextElement>
            </View>
            <View
                  style={undefined}
            >
                  <Image
                        resizeMode="cover"
                        source={
                              Object {
                                    "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                  }
                        }
                        style={
                              Array [
                                    Object {
                                      "height": 150,
                                      "width": null,
                                    },
                                    undefined,
                                  ]
                        }
                  >
                        <View
                              style={
                                    Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0, 0, 0, 0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                              }
                        >
                              
                        </View>
                  </Image>
                  <View
                        style={
                              Array [
                                    Object {
                                      "padding": 10,
                                    },
                                    undefined,
                                  ]
                        }
                  />
            </View>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Card
        containerStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        fontFamily="arial"
        image={
                Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
        }
        title="HELLO WORLD"
        titleStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "containerStyle": Object {
            "backgroundColor": "red",
          },
          "fontFamily": "arial",
          "image": Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          },
          "title": "HELLO WORLD",
          "titleStyle": Object {
            "backgroundColor": "red",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "padding": 0,
                              },
                              Object {
                                "backgroundColor": "red",
                              },
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    <View>
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "color": "#43484d",
                                                              "fontSize": 17.5,
                                                              "fontWeight": "bold",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "marginTop": 15,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                            Object {
                                                              "fontFamily": "arial",
                                                            },
                                                          ]
                                        }
                              >
                                        HELLO WORLD
                              </TextElement>
                    </View>
                    <View
                              style={undefined}
                    >
                              <Image
                                        resizeMode="cover"
                                        source={
                                                  Object {
                                                            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                          }
                                        }
                                        style={
                                                  Array [
                                                            Object {
                                                              "height": 150,
                                                              "width": null,
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              >
                                        <View
                                                  style={
                                                            Object {
                                                                      "alignItems": "center",
                                                                      "alignSelf": "stretch",
                                                                      "backgroundColor": "rgba(0, 0, 0, 0.2)",
                                                                      "bottom": 0,
                                                                      "flex": 1,
                                                                      "justifyContent": "center",
                                                                      "left": 0,
                                                                      "position": "absolute",
                                                                      "right": 0,
                                                                      "top": 0,
                                                                    }
                                                  }
                                        >
                                                  
                                        </View>
                              </Image>
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "padding": 10,
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                    </View>
          </View>
</View>,
        "_debugID": 6,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "padding": 0,
                              },
                              Object {
                                "backgroundColor": "red",
                              },
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    <View>
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "color": "#43484d",
                                                              "fontSize": 17.5,
                                                              "fontWeight": "bold",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "marginTop": 15,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                            Object {
                                                              "fontFamily": "arial",
                                                            },
                                                          ]
                                        }
                              >
                                        HELLO WORLD
                              </TextElement>
                    </View>
                    <View
                              style={undefined}
                    >
                              <Image
                                        resizeMode="cover"
                                        source={
                                                  Object {
                                                            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                          }
                                        }
                                        style={
                                                  Array [
                                                            Object {
                                                              "height": 150,
                                                              "width": null,
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              >
                                        <View
                                                  style={
                                                            Object {
                                                                      "alignItems": "center",
                                                                      "alignSelf": "stretch",
                                                                      "backgroundColor": "rgba(0, 0, 0, 0.2)",
                                                                      "bottom": 0,
                                                                      "flex": 1,
                                                                      "justifyContent": "center",
                                                                      "left": 0,
                                                                      "position": "absolute",
                                                                      "right": 0,
                                                                      "top": 0,
                                                                    }
                                                  }
                                        >
                                                  
                                        </View>
                              </Image>
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "padding": 10,
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                    </View>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Card
    containerStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    fontFamily="arial"
    image={
        Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
    }
    title="HELLO WORLD"
    titleStyle={
        Object {
            "backgroundColor": "red",
          }
    }
/>,
}
`;

exports[`Card Component should have Card title without image 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "#e1e8ee",
              "borderWidth": 1,
              "margin": 15,
              "marginBottom": 0,
              "padding": 15,
              "shadowColor": "rgba(0,0,0, .2)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            undefined,
            Object {
              "backgroundColor": "red",
            },
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                Object {
                  "flexDirection": "row",
                },
              ]
        }
    >
        <View>
            <TextElement
                style={
                    Array [
                        Object {
                          "color": "#43484d",
                          "fontSize": 17.5,
                          "fontWeight": "bold",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        undefined,
                        undefined,
                        Object {
                          "fontFamily": "arial",
                        },
                      ]
                }
            >
                Card Title
            </TextElement>
            <Divider
                style={
                    Array [
                        Object {
                          "marginBottom": 15,
                        },
                        Object {
                          "backgroundColor": "red",
                        },
                      ]
                }
            />
        </View>
    </View>
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "#e1e8ee",
                    "borderWidth": 1,
                    "margin": 15,
                    "marginBottom": 0,
                    "padding": 15,
                    "shadowColor": "rgba(0,0,0, .2)",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  undefined,
                  Object {
                    "backgroundColor": "red",
                  },
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                        Object {
                          "flexDirection": "row",
                        },
                      ]
            }
      >
            <View>
                  <TextElement
                        style={
                              Array [
                                    Object {
                                      "color": "#43484d",
                                      "fontSize": 17.5,
                                      "fontWeight": "bold",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                    undefined,
                                    Object {
                                      "fontFamily": "arial",
                                    },
                                  ]
                        }
                  >
                        Card Title
                  </TextElement>
                  <Divider
                        style={
                              Array [
                                    Object {
                                      "marginBottom": 15,
                                    },
                                    Object {
                                      "backgroundColor": "red",
                                    },
                                  ]
                        }
                  />
            </View>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Card
        containerStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        dividerStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        flexDirection="row"
        fontFamily="arial"
        title="Card Title"
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "containerStyle": Object {
            "backgroundColor": "red",
          },
          "dividerStyle": Object {
            "backgroundColor": "red",
          },
          "flexDirection": "row",
          "fontFamily": "arial",
          "title": "Card Title",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              undefined,
                              Object {
                                "backgroundColor": "red",
                              },
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        undefined,
                                        Object {
                                          "flexDirection": "row",
                                        },
                                      ]
                    }
          >
                    <View>
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "color": "#43484d",
                                                              "fontSize": 17.5,
                                                              "fontWeight": "bold",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                            undefined,
                                                            Object {
                                                              "fontFamily": "arial",
                                                            },
                                                          ]
                                        }
                              >
                                        Card Title
                              </TextElement>
                              <Divider
                                        style={
                                                  Array [
                                                            Object {
                                                              "marginBottom": 15,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                          ]
                                        }
                              />
                    </View>
          </View>
</View>,
        "_debugID": 4,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              undefined,
                              Object {
                                "backgroundColor": "red",
                              },
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        undefined,
                                        Object {
                                          "flexDirection": "row",
                                        },
                                      ]
                    }
          >
                    <View>
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "color": "#43484d",
                                                              "fontSize": 17.5,
                                                              "fontWeight": "bold",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                            undefined,
                                                            Object {
                                                              "fontFamily": "arial",
                                                            },
                                                          ]
                                        }
                              >
                                        Card Title
                              </TextElement>
                              <Divider
                                        style={
                                                  Array [
                                                            Object {
                                                              "marginBottom": 15,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                          ]
                                        }
                              />
                    </View>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Card
    containerStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    dividerStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    flexDirection="row"
    fontFamily="arial"
    title="Card Title"
/>,
}
`;

exports[`Card Component should have Card with featured title 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "#e1e8ee",
              "borderWidth": 1,
              "margin": 15,
              "marginBottom": 0,
              "padding": 15,
              "shadowColor": "rgba(0,0,0, .2)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            Object {
              "padding": 0,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "backgroundColor": "red",
                },
                undefined,
              ]
        }
    >
        <View>
            <TextElement
                style={
                    Array [
                        Object {
                          "color": "#43484d",
                          "fontSize": 17.5,
                          "fontWeight": "bold",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        Object {
                          "marginTop": 15,
                        },
                        undefined,
                        undefined,
                      ]
                }
            >
                foo title
            </TextElement>
        </View>
        <View
            style={
                Object {
                    "backgroundColor": "red",
                  }
            }
        >
            <Image
                resizeMode="cover"
                source={
                    Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
                }
                style={
                    Array [
                        Object {
                          "height": 150,
                          "width": null,
                        },
                        Object {
                          "backgroundColor": "red",
                        },
                      ]
                }
            >
                <View
                    style={
                        Object {
                            "alignItems": "center",
                            "alignSelf": "stretch",
                            "backgroundColor": "rgba(0, 0, 0, 0.2)",
                            "bottom": 0,
                            "flex": 1,
                            "justifyContent": "center",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                    }
                >
                    <TextElement
                        style={
                            Array [
                                Object {
                                  "color": "white",
                                  "fontSize": 22.5,
                                  "fontWeight": "800",
                                  "marginBottom": 8,
                                },
                                Object {
                                  "backgroundColor": "red",
                                },
                              ]
                        }
                    >
                        featured title
                    </TextElement>
                    <TextElement
                        style={
                            Array [
                                Object {
                                  "color": "white",
                                  "fontSize": 16.25,
                                  "fontWeight": "400",
                                  "marginBottom": 8,
                                },
                                Object {
                                  "backgroundColor": "red",
                                },
                              ]
                        }
                    >
                        featured sub title
                    </TextElement>
                </View>
            </Image>
            <View
                style={
                    Array [
                        Object {
                          "padding": 10,
                        },
                        Object {
                          "backgroundColor": "red",
                        },
                      ]
                }
            />
        </View>
    </View>
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "#e1e8ee",
                    "borderWidth": 1,
                    "margin": 15,
                    "marginBottom": 0,
                    "padding": 15,
                    "shadowColor": "rgba(0,0,0, .2)",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  Object {
                    "padding": 0,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "backgroundColor": "red",
                        },
                        undefined,
                      ]
            }
      >
            <View>
                  <TextElement
                        style={
                              Array [
                                    Object {
                                      "color": "#43484d",
                                      "fontSize": 17.5,
                                      "fontWeight": "bold",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "marginTop": 15,
                                    },
                                    undefined,
                                    undefined,
                                  ]
                        }
                  >
                        foo title
                  </TextElement>
            </View>
            <View
                  style={
                        Object {
                              "backgroundColor": "red",
                            }
                  }
            >
                  <Image
                        resizeMode="cover"
                        source={
                              Object {
                                    "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                  }
                        }
                        style={
                              Array [
                                    Object {
                                      "height": 150,
                                      "width": null,
                                    },
                                    Object {
                                      "backgroundColor": "red",
                                    },
                                  ]
                        }
                  >
                        <View
                              style={
                                    Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0, 0, 0, 0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                              }
                        >
                              <TextElement
                                    style={
                                          Array [
                                                Object {
                                                  "color": "white",
                                                  "fontSize": 22.5,
                                                  "fontWeight": "800",
                                                  "marginBottom": 8,
                                                },
                                                Object {
                                                  "backgroundColor": "red",
                                                },
                                              ]
                                    }
                              >
                                    featured title
                              </TextElement>
                              <TextElement
                                    style={
                                          Array [
                                                Object {
                                                  "color": "white",
                                                  "fontSize": 16.25,
                                                  "fontWeight": "400",
                                                  "marginBottom": 8,
                                                },
                                                Object {
                                                  "backgroundColor": "red",
                                                },
                                              ]
                                    }
                              >
                                    featured sub title
                              </TextElement>
                        </View>
                  </Image>
                  <View
                        style={
                              Array [
                                    Object {
                                      "padding": 10,
                                    },
                                    Object {
                                      "backgroundColor": "red",
                                    },
                                  ]
                        }
                  />
            </View>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Card
        featuredSubtitle="featured sub title"
        featuredSubtitleStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        featuredTitle="featured title"
        featuredTitleStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        image={
                Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
        }
        imageStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        imageWrapperStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
        title="foo title"
        wrapperStyle={
                Object {
                        "backgroundColor": "red",
                      }
        }
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "featuredSubtitle": "featured sub title",
          "featuredSubtitleStyle": Object {
            "backgroundColor": "red",
          },
          "featuredTitle": "featured title",
          "featuredTitleStyle": Object {
            "backgroundColor": "red",
          },
          "image": Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          },
          "imageStyle": Object {
            "backgroundColor": "red",
          },
          "imageWrapperStyle": Object {
            "backgroundColor": "red",
          },
          "title": "foo title",
          "wrapperStyle": Object {
            "backgroundColor": "red",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "padding": 0,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        Object {
                                          "backgroundColor": "red",
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <View>
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "color": "#43484d",
                                                              "fontSize": 17.5,
                                                              "fontWeight": "bold",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "marginTop": 15,
                                                            },
                                                            undefined,
                                                            undefined,
                                                          ]
                                        }
                              >
                                        foo title
                              </TextElement>
                    </View>
                    <View
                              style={
                                        Object {
                                                  "backgroundColor": "red",
                                                }
                              }
                    >
                              <Image
                                        resizeMode="cover"
                                        source={
                                                  Object {
                                                            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                          }
                                        }
                                        style={
                                                  Array [
                                                            Object {
                                                              "height": 150,
                                                              "width": null,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                          ]
                                        }
                              >
                                        <View
                                                  style={
                                                            Object {
                                                                      "alignItems": "center",
                                                                      "alignSelf": "stretch",
                                                                      "backgroundColor": "rgba(0, 0, 0, 0.2)",
                                                                      "bottom": 0,
                                                                      "flex": 1,
                                                                      "justifyContent": "center",
                                                                      "left": 0,
                                                                      "position": "absolute",
                                                                      "right": 0,
                                                                      "top": 0,
                                                                    }
                                                  }
                                        >
                                                  <TextElement
                                                            style={
                                                                      Array [
                                                                                Object {
                                                                                  "color": "white",
                                                                                  "fontSize": 22.5,
                                                                                  "fontWeight": "800",
                                                                                  "marginBottom": 8,
                                                                                },
                                                                                Object {
                                                                                  "backgroundColor": "red",
                                                                                },
                                                                              ]
                                                            }
                                                  >
                                                            featured title
                                                  </TextElement>
                                                  <TextElement
                                                            style={
                                                                      Array [
                                                                                Object {
                                                                                  "color": "white",
                                                                                  "fontSize": 16.25,
                                                                                  "fontWeight": "400",
                                                                                  "marginBottom": 8,
                                                                                },
                                                                                Object {
                                                                                  "backgroundColor": "red",
                                                                                },
                                                                              ]
                                                            }
                                                  >
                                                            featured sub title
                                                  </TextElement>
                                        </View>
                              </Image>
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "padding": 10,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                          ]
                                        }
                              />
                    </View>
          </View>
</View>,
        "_debugID": 8,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "padding": 0,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        Object {
                                          "backgroundColor": "red",
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <View>
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "color": "#43484d",
                                                              "fontSize": 17.5,
                                                              "fontWeight": "bold",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "marginTop": 15,
                                                            },
                                                            undefined,
                                                            undefined,
                                                          ]
                                        }
                              >
                                        foo title
                              </TextElement>
                    </View>
                    <View
                              style={
                                        Object {
                                                  "backgroundColor": "red",
                                                }
                              }
                    >
                              <Image
                                        resizeMode="cover"
                                        source={
                                                  Object {
                                                            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                          }
                                        }
                                        style={
                                                  Array [
                                                            Object {
                                                              "height": 150,
                                                              "width": null,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                          ]
                                        }
                              >
                                        <View
                                                  style={
                                                            Object {
                                                                      "alignItems": "center",
                                                                      "alignSelf": "stretch",
                                                                      "backgroundColor": "rgba(0, 0, 0, 0.2)",
                                                                      "bottom": 0,
                                                                      "flex": 1,
                                                                      "justifyContent": "center",
                                                                      "left": 0,
                                                                      "position": "absolute",
                                                                      "right": 0,
                                                                      "top": 0,
                                                                    }
                                                  }
                                        >
                                                  <TextElement
                                                            style={
                                                                      Array [
                                                                                Object {
                                                                                  "color": "white",
                                                                                  "fontSize": 22.5,
                                                                                  "fontWeight": "800",
                                                                                  "marginBottom": 8,
                                                                                },
                                                                                Object {
                                                                                  "backgroundColor": "red",
                                                                                },
                                                                              ]
                                                            }
                                                  >
                                                            featured title
                                                  </TextElement>
                                                  <TextElement
                                                            style={
                                                                      Array [
                                                                                Object {
                                                                                  "color": "white",
                                                                                  "fontSize": 16.25,
                                                                                  "fontWeight": "400",
                                                                                  "marginBottom": 8,
                                                                                },
                                                                                Object {
                                                                                  "backgroundColor": "red",
                                                                                },
                                                                              ]
                                                            }
                                                  >
                                                            featured sub title
                                                  </TextElement>
                                        </View>
                              </Image>
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "padding": 10,
                                                            },
                                                            Object {
                                                              "backgroundColor": "red",
                                                            },
                                                          ]
                                        }
                              />
                    </View>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Card
    featuredSubtitle="featured sub title"
    featuredSubtitleStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    featuredTitle="featured title"
    featuredTitleStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    image={
        Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
    }
    imageStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    imageWrapperStyle={
        Object {
            "backgroundColor": "red",
          }
    }
    title="foo title"
    wrapperStyle={
        Object {
            "backgroundColor": "red",
          }
    }
/>,
}
`;

exports[`Card Component should render without issues 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "white",
              "borderColor": "#e1e8ee",
              "borderWidth": 1,
              "margin": 15,
              "marginBottom": 0,
              "padding": 15,
              "shadowColor": "rgba(0,0,0, .2)",
              "shadowOffset": Object {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            undefined,
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                },
                undefined,
                undefined,
              ]
        }
    >
        
    </View>
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "#e1e8ee",
                    "borderWidth": 1,
                    "margin": 15,
                    "marginBottom": 0,
                    "padding": 15,
                    "shadowColor": "rgba(0,0,0, .2)",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  undefined,
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                        },
                        undefined,
                        undefined,
                      ]
            }
      >
            
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Card />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              undefined,
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    
          </View>
</View>,
        "_debugID": 2,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "white",
                                "borderColor": "#e1e8ee",
                                "borderWidth": 1,
                                "margin": 15,
                                "marginBottom": 0,
                                "padding": 15,
                                "shadowColor": "rgba(0,0,0, .2)",
                                "shadowOffset": Object {
                                  "height": 0,
                                  "width": 0,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              undefined,
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Card />,
}
`;
